Add scorecard activity added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,22 @@
     <string name="helloworld">Hello World</string>
     <string name="save">save</string>
     <string name="search">search</string>
+
+
+
+    <string-array name="rounds">
+        <item>3 Rounds</item>
+        <item>4 Rounds</item>
+        <item>5 Rounds</item>
+        <item>6 Rounds</item>
+        <item>8 Rounds</item>
+        <item>10 Rounds</item>
+        <item>12 Rounds</item>
+        <item>15 Rounds</item>
+
+
+
+
+
+    </string-array>
 </resources>
